@@ -1,0 +1,38 @@
+# Copyright 2011 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
+
+# Test loading symbols from unrelocated C++ object files.
+
+set testfile no-dmgl-verbose
+set srcfile ${testfile}.cc
+set executable ${testfile}.o
+set binfile ${objdir}/${subdir}/${executable}
+
+if { [skip_cplus_tests] } { continue }
+
+if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" object {c++ debug}] != "" } {
+     untested ${testfile}.exp
+     return -1
+}
+
+clean_restart ${executable}
+
+gdb_test_no_output "set breakpoint pending off"
+
+gdb_breakpoint {'f(std::string)'}
+
+gdb_test {break 'f(std::basic_string<char, std::char_traits<char>, std::allocator<char> >)'} \
+	 {Function ".*" not defined\.} \
+	 "DMGL_VERBOSE-demangled f(std::string) is not defined"
